--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
-    "pages/reader/reader",
-    "pages/welcome/welcome"
+    "pages/welcome/welcome",
+    "pages/posts/post",
+    "pages/reader/reader"
   ],
   "window": {
     "backgroundTextStyle": "light",
