--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
   "pages": [
-    "pages/welcome/welcome",
     "pages/posts/post",
+    "pages/posts/post-detail/post-detail",
+    "pages/welcome/welcome",
     "pages/reader/reader"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#b3d4db",
+    "navigationBarBackgroundColor": "#405f80",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "black"
   }
