--- a/app.json
+++ b/app.json
@@ -1,40 +1,39 @@
 {
   "pages": [
     "pages/movies/movies",
+    "pages/movies/more-movie/more-movie",
     "pages/welcome/welcome",
-
     "pages/posts/post",
     "pages/posts/post-detail/post-detail",
-
     "pages/reader/reader"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#405f80",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "white"
   },
   "requiredBackgroundModes": [
     "audio"
   ],
   "tabBar": {
-    "borderStyle":"white",
-    "list":[
+    "borderStyle": "white",
+    "list": [
       {
         "pagePath": "pages/welcome/welcome",
         "text": "首页",
-        "iconPath":"/images/tab/ciwei.png",
-        "selectedIconPath":"/images/tab/ciwei_hl.png"
+        "iconPath": "/images/tab/ciwei.png",
+        "selectedIconPath": "/images/tab/ciwei_hl.png"
       },
       {
-        "pagePath":"pages/posts/post",
-        "text":"阅读",
+        "pagePath": "pages/posts/post",
+        "text": "阅读",
         "iconPath": "/images/tab/yuedu.png",
         "selectedIconPath": "/images/tab/yuedu_hl.png"
       },
       {
-        "pagePath":"pages/movies/movies",
-        "text":"电影",
+        "pagePath": "pages/movies/movies",
+        "text": "电影",
         "iconPath": "/images/tab/dianying.png",
         "selectedIconPath": "/images/tab/dianying_hl.png"
       }
